syntax = "proto3";

package service;

service ServiceService {
    rpc FindOne (ID) returns (SingleData) {}
    rpc FindAll (Empty) returns (MultipleData) {}
    rpc Create (CreateDto) returns (SingleData) {}
    rpc Update (UpdateDto) returns (SingleData){}
    rpc Remove (ID) returns (SingleData){}
}

//paramater
message ID {
    int32 id = 1;
}

message Empty {}

//dto


message CreateDto{
    int32 park = 1;
    int32 user = 2;
    string startedAt = 3;
    string endedAt = 4;
    int32 price = 5;
    int32 tariff = 6;
} 

message UpdateDto{
   int32 id = 1;
   CreateDto dto = 2;
} 


//return data



message MultipleData {
    string message = 1;
    int32 statusCode = 2;
    repeated Service data = 3;
    Error error = 4;
}

message SingleData {
    string message = 1;
    int32 statusCode = 2;
    Service data = 3;
    Error error = 4;
}


//entity
message Service {
    int32 id = 1;
    int32 park = 2;
    int32 user = 3;
    string startedAt = 4;
    string endedAt = 5;
    int32 price = 6;
    int32 tariff = 7;
    string createdAt = 8;
    string lastEditedAt = 9;

}


//Error
message Error {
    string errorMessage = 1;
    int32 errorCode = 2;
}